@@ -1,3 +1,8 @@
+2005-07-12 Yen-Ju Chen <yjchenx at gmail _dot_ com>
+
+    * Source/Analysis/LCPerFieldAnalyzerWrapper.m:
+    add -description.
+
 2005-07-07 Yen-Ju Chen <yjchenx at gmail _dot_ com>
 
     * Source/Search/LCQuery.m: fix warning.
